--- a/app/src/main/res/layout/layout_miscellaneous.xml
+++ b/app/src/main/res/layout/layout_miscellaneous.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layoutMiscellaneous"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/background_miscellaneous"
-    android:layout_gravity="bottom"
     app:layout_behavior="@string/bottom_sheet_behavior"
-    app:behavior_peekHeight="80dp">
+    app:behavior_peekHeight="@dimen/_40sdp">
 
     <TextView
         android:id="@+id/textMiscellaneous"
@@ -17,9 +17,9 @@
         android:fontFamily="@font/roboto_medium"
         android:gravity="center"
         android:includeFontPadding="false"
-        android:text="@string/miscellaneous"
+        android:text="miscellaneous"
         android:textColor="@color/white"
-        android:textSize="@dimen/_13ssp"/>
+        android:textSize="@dimen/_13ssp" />
 
     <LinearLayout
         android:id="@+id/layoutNoteColor"
@@ -29,16 +29,174 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <!-- ألوان الملاحظات -->
+        <!-- مكرر لكل لون مع View و ImageView في FrameLayout -->
 
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <View
+                android:id="@+id/viewColor1"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:background="@drawable/background_note_color_1" />
+            <ImageView
+                android:id="@+id/ImageColor1"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:padding="@dimen/_10sdp"
+                android:src="@drawable/ic_done"
+                android:contentDescription="@string/app_name"
+                app:tint="@color/white" />
+        </FrameLayout>
 
+        <!-- كرري هذا الجزء حسب عدد الألوان -->
+        <!-- ... viewColor2, ImageColor2 ... إلى viewColor5 -->
+
+        <!-- اللون 2 -->
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <View
+                android:id="@+id/viewColor2"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:background="@drawable/background_note_color_2" />
+            <ImageView
+                android:id="@+id/ImageColor2"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:padding="@dimen/_10sdp"
+                android:contentDescription="@string/app_name"
+                app:tint="@color/white" />
+        </FrameLayout>
+
+        <!-- اللون 3 -->
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <View
+                android:id="@+id/viewColor3"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:background="@drawable/background_note_color_3" />
+            <ImageView
+                android:id="@+id/ImageColor3"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:padding="@dimen/_10sdp"
+                android:contentDescription="@string/app_name"
+                app:tint="@color/white" />
+        </FrameLayout>
+
+        <!-- اللون 4 -->
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <View
+                android:id="@+id/viewColor4"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:background="@drawable/background_note_color_4" />
+            <ImageView
+                android:id="@+id/ImageColor4"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:padding="@dimen/_10sdp"
+                android:contentDescription="@string/app_name"
+                app:tint="@color/white" />
+        </FrameLayout>
+
+        <!-- اللون 5 -->
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <View
+                android:id="@+id/viewColor5"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:background="@drawable/background_note_color_5" />
+            <ImageView
+                android:id="@+id/ImageColor5"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:padding="@dimen/_10sdp"
+                android:contentDescription="@string/app_name"
+                app:tint="@color/white" />
+        </FrameLayout>
     </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_10sdp"
         android:fontFamily="@font/roboto_medium"
         android:includeFontPadding="false"
-        android:text="@string/pick_color"
+        android:text="pick_color"
         android:textColor="@color/white"
-        android:textSize="@dimen/_13ssp"/>
+        android:textSize="@dimen/_13ssp" />
+
+    <!-- زر إضافة صورة -->
+    <LinearLayout
+        android:id="@+id/layoutAddImage"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="@dimen/_10sdp"
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:layout_width="@dimen/_22sdp"
+            android:layout_height="@dimen/_22sdp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_image"
+            app:tint="@color/colorIcon" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:fontFamily="@font/roboto_medium"
+            android:includeFontPadding="false"
+            android:text="add image"
+            android:textColor="@color/colorIcon"
+            android:textSize="@dimen/_12ssp" />
+    </LinearLayout>
+
+    <!-- زر إضافة رابط -->
+    <LinearLayout
+        android:id="@+id/layoutAddUrl"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:layout_width="@dimen/_22sdp"
+            android:layout_height="@dimen/_22sdp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_web_link"
+            app:tint="@color/colorIcon" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:fontFamily="@font/roboto_medium"
+            android:includeFontPadding="false"
+            android:text="add url"
+            android:textColor="@color/colorIcon"
+            android:textSize="@dimen/_12ssp" />
+    </LinearLayout>
+
 </LinearLayout>
