--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -56,5 +56,4 @@
         android:includeFontPadding="false"
         android:textColor="@color/colorTextSubtitle"
         android:textSize="@dimen/_7ssp"/>
-
-</LinearLayou>
+</LinearLayout>
