--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,6 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:backgroundTint="#FFFFFF"
     tools:context=".activities.WelcomeActivity">
 
     <TextView
@@ -21,7 +23,7 @@
         app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintVertical_bias="0.449" />
+        app:layout_constraintVertical_bias="0.449" />
 
 
     <Button
@@ -31,6 +33,7 @@
         android:layout_centerInParent="true"
         android:backgroundTint="@color/primaryColor"
         android:text="Go to Home"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.458"
