--- a/app/src/main/res/drawable/background_miscellaneous.xml
+++ b/app/src/main/res/drawable/background_miscellaneous.xml
@@ -5,6 +5,6 @@
     <solid android:color="@color/colorSearchBackground"/>
     <corners
         android:radius="@dimen/_15sdp"
-        android:topRightRadius="@dimen/_15sdp"
+        android:topRightRadius="@dimen/_15sdp" />
 
 </shape>
