--- a/app/src/main/res/drawable/background_note_color_2.xml
+++ b/app/src/main/res/drawable/background_note_color_2.xml
@@ -2,12 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item>
-
         <shape android:shape="oval">
-           <stroke
-               android:width="@dimen/_25sdp"
-               android:color="@color/colorNoteColor2"
-
+            <stroke
+                android:width="@dimen/_25sdp"
+                android:color="@color/colorNoteColor2" />
         </shape>
     </item>
 
@@ -16,27 +14,21 @@
         android:left="@dimen/_3sdp"
         android:right="@dimen/_3sdp"
         android:top="@dimen/_3sdp">
-
-
         <shape android:shape="oval">
-
             <stroke
                 android:width="@dimen/_6sdp"
-                android:color="@color/colorMscellaneousBackground"
+                android:color="@color/colorMscellaneousBackground" />
         </shape>
     </item>
-
 
     <item
         android:bottom="@dimen/_6sdp"
         android:left="@dimen/_6sdp"
         android:right="@dimen/_6sdp"
         android:top="@dimen/_6sdp">
-
-        <shape android:shape="oval"
-            >
-
-            <solid android:color="@color/colorNoteColor2"
+        <shape android:shape="oval">
+            <solid android:color="@color/colorNoteColor2" />
         </shape>
     </item>
+
 </layer-list>
