--- a/app/src/main/res/drawable/background_note_color_5.xml
+++ b/app/src/main/res/drawable/background_note_color_5.xml
@@ -2,12 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item>
-
         <shape android:shape="oval">
-           <stroke
-               android:width="@dimen/_25sdp"
-               android:color="@color/colorNoteColor5"
-
+            <stroke
+                android:width="@dimen/_25sdp"
+                android:color="@color/colorNoteColor5" />
         </shape>
     </item>
 
@@ -17,15 +15,12 @@
         android:right="@dimen/_3sdp"
         android:top="@dimen/_3sdp">
 
-
         <shape android:shape="oval">
-
             <stroke
                 android:width="@dimen/_6sdp"
-                android:color="@color/colorMscellaneousBackground"
+                android:color="@color/colorMscellaneousBackground" />
         </shape>
     </item>
-
 
     <item
         android:bottom="@dimen/_6sdp"
@@ -33,10 +28,9 @@
         android:right="@dimen/_6sdp"
         android:top="@dimen/_6sdp">
 
-        <shape android:shape="oval"
-            >
-
-            <solid android:color="@color/colorNoteColor5"
+        <shape android:shape="oval">
+            <solid android:color="@color/colorNoteColor5" />
         </shape>
     </item>
+
 </layer-list>
