--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,8 +40,7 @@
         app:layout_constraintTop_toBottomOf="@id/textMyNotes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
-
-        <ImageView
+             <ImageView
             android:layout_width="65dp"
             android:layout_height="48dp"
             android:contentDescription="@string/app_name"
@@ -61,8 +60,8 @@
             android:includeFontPadding="false"
             android:inputType="text"
             android:textColor="@color/white"
-            android:textColorHint="@color/colorTextHint"
-            android:textSize="@dimen/_13ssp"/>
+            android:textColorHint="@color/searchIcon"
+            android:textSize="@dimen/_13ssp" />
 
     </LinearLayout>
 
@@ -71,15 +70,17 @@
         android:id="@+id/notRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:importantForAccessibility="no"
         android:clipToPadding="false"
+        android:importantForAccessibility="no"
         android:paddingStart="0dp"
         android:paddingEnd="@dimen/_12sdp"
         android:paddingBottom="@dimen/_12sdp"
         app:layout_constraintBottom_toTopOf="@+id/layoutQuikActions"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layoutSearch" />
+        app:layout_constraintTop_toBottomOf="@+id/layoutSearch"
+        app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
         android:id="@+id/layoutQuikActions"
@@ -129,11 +130,15 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="44dp"
         android:background="@drawable/background_add_button"
+        android:backgroundTint="#FFC107"
         android:contentDescription="@string/app_name"
         android:padding="@dimen/_5sdp"
         android:src="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/primaryColor" />
+        app:tint="@color/primaryColor"
+        android:clickable="true"
+        android:focusable="true"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
