--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,6 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/onPrimary"
+    android:backgroundTint="#FFFFFF"
     tools:context=".activities.SignupActivity">
 
     <TextView
@@ -42,6 +44,8 @@
         android:layout_height="59dp"
         android:backgroundTint="@color/primaryColor"
         android:text="Sign in"
+        android:textColor="@color/onPrimary"
+        android:textColorLink="@color/primaryColor"
         android:textSize="20sp"
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,6 +61,8 @@
         android:layout_height="59dp"
         android:backgroundTint="@color/primaryColor"
         android:text="Cancel"
+        android:textColor="@color/onPrimary"
+        android:textColorLink="@color/primaryColor"
         android:textSize="20sp"
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
